<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_undo"
        android:title="@string/action_undo"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_redo"
        android:icon="@drawable/ic_redo"
        android:title="@string/action_redo"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_duplicate"
        android:icon="@drawable/ic_copy"
        android:title="@string/action_duplicate"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_bring_to_front"
        android:title="@string/action_bring_to_front"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_send_to_back"
        android:title="@string/action_send_to_back"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_cut"
        android:title="@string/action_cut"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_copy"
        android:title="@string/action_copy"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_paste"
        android:title="@string/action_paste"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_grid"
        android:title="Toggle Grid"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rtl"
        android:title="Toggle RTL"
        app:showAsAction="never" />

</menu>
