<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/menu_canvas"
            app:title="@string/nav_canvas"
            app:titleTextColor="?attr/colorOnSurface" />
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.uibuilder.app.presentation.canvas.CanvasView
            android:id="@+id/canvasView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/canvas_background" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddComponent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_margin="16dp"
            android:contentDescription="@string/palette_title"
            app:srcCompat="@drawable/ic_add"
            app:tint="?attr/colorOnPrimary" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabProperties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:contentDescription="@string/properties_title"
            app:srcCompat="@drawable/ic_settings"
            app:tint="?attr/colorOnPrimary" />
    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
